# easy-plants

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
src/easy_plants/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/easy_plants/migrations/: 0001_initial.py  0002_alter_plantimage_plant_plantentry.py  0003_alter_plantentry_options_alter_plantentry_date.py  0004_plant_archived_plant_flowering_start_plant_harvested_and_more.py  0005_alter_plant_flowering_start_alter_plant_harvested_and_more.py  0006_plant_day_one.py  0007_plant_drying_end_alter_plantentry_date.py  0008_plant_yield_dry_plant_yield_wet.py  0009_plant_yield_kief.py
src/easy_plants/static/easy_plants/: main.css  main.js
src/easy_plants/templates/easy_plants/: add_plant.html  add_plant_image.html  base.html  delete_plant_entry.html  home.html  plant_add.html  plant_detail.html  plant_entry_update.html  plant_list.html  plant_update.html  update_plant_entry.html
src/easy_plants/templates/registration/: login.html
src/easy_plants/templatetags/: nav.py
src/easy_plants/tests/: settings.py  test_plant.py
